<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_buscar">

    <fragment
        android:id="@+id/navigation_buscar"
        android:name="com.lulapps.vivienda360.ui.buscar.BuscarFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_buscar" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.lulapps.vivienda360.ui.perfil.PerfilFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.lulapps.vivienda360.ui.favoritos.FavoritosFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_favoritos" />
</navigation>