<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeccionBuscarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewFondoSuperior"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/fondo_desenfocado_rec"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1504788" />

            <AutoCompleteTextView
                android:id="@+id/espacio_barrio"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext_redondo"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:hint="@string/busqueda_sector"
                android:textColor="@color/textos"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/imageViewFondoSuperior" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/transparente"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/guideline7"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/guideline8">

                <fragment
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/mapView"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".ui.buscar.BuscarFragment" />

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.53" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.27" />

            <LinearLayout
                android:id="@+id/linearLayoutContenedorTipoOferta"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/borde_redondeado_20"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <android.widget.Button
                    android:id="@+id/buttonVenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton_activo_redondo"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="0dp"
                    android:text="@string/venta"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <android.widget.Button
                    android:id="@+id/buttonArriendo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/boton_inactivo_redondo"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="0dp"
                    android:text="@string/arriendo"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <android.widget.Button
                android:id="@+id/buttonBuscar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/boton_aceptar_redondo"
                android:fontFamily="@font/roboto_medium"
                android:padding="0dp"
                android:text="@string/title_buscar"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutContenedorTipoOferta" />

            <TextView
                android:id="@+id/textViewOlvidasteContrasenaLogin"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:text="@string/quieres_publicar"
                android:textColor="@color/texto_link"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/buttonBuscar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>